--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,160 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    overflow-x: hidden;
+}
+
+header, header i {
+    background-color: #4f2361;
+    color: #eeeeee;
+    font-size: 1.2em;
+}
+
+span, h1 {
+    font-weight: bold;
+}
+
+button {
+    padding: 4px 10px;
+    background-color: #896acd;
+    color: #eeeeee;
+    border: none; 
+    border-radius: 20px;
+    margin-right: 30px;
+    cursor: pointer; /*aparece mano en cursor*/
+    box-shadow: 1px 3px 11px -5px #896acd;
+}
+
+button:hover {
+    background-color: #eeeeee;
+    color: #cb1f9c;
+    box-shadow: 1px 3px 11px -5px #896acd;
+    transition: ease-in .4s; /*cambio de color mas progresivo*/
+}
+
+nav, .nav-link {
+    background-color: #eeeeee;
+    color: #4f2361;
+    text-transform: uppercase;
+}
+
+.navbar .active {
+    color: #cb1f9c;
+}
+
+#foto_perfil {
+    height: 400px;
+    border-radius: 20px;
+    margin-left: 150px;
+    padding-bottom: 5px;
+}
+
+section, footer {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+#acerca_de, #educacion, #proyectos {
+    background-color: #ffffff;
+    color: #896acd;
+    margin-bottom: 20px;
+    font-size: 1.1em;
+}
+
+#acerca_de {
+    background-image: url("C:\Users\silvi\OneDrive\Escritorio\Portfolio Angular\lavender-flowers-background.jpg");
+    background-size: cover;
+}    
+
+#acerca_de p {
+    margin-top: 20px;
+}
+
+#experiencia, #skills, footer {
+    margin-top: -20px;
+    background-color: #4f2361;
+    color: #eeeeee;
+    font-size: 1.1em;
+    
+}
+
+td img {
+    max-width: 10vw;
+    max-height: 10vh;
+    margin: 30px;
+    margin-top: 10px;
+    border-radius: 20px;
+}
+
+.divider {
+    height: 4px;
+    width: 60px;;
+    margin-top: 5px;
+    margin-bottom: 2em; 
+}
+
+.oscuro {
+    background: #4f2361
+}
+
+.claro {
+    background: #eeeeee;
+    color: #4f2361
+}
+
+#soft-h2 {
+    margin-top: 50px;
+}
+
+.progress {
+    font-size: 1.1em;
+    background-color: #4f2361
+}
+
+.progress-bar {
+    border-radius: 20px;
+    background-color: #896acd;
+    text-align: center;
+}
+
+#skills h5 {
+    margin: 10px;
+}
+
+.contact-a {
+    color: #eeeeee;
+    
+}
+
+.contact-a:hover {
+   color: #eeeeee;
+   text-decoration: none;
+}
+
+.contact-icon {
+    margin-right: 5px;
+    margin-left: 15px;
+}
+
+.card-title {
+    font-style: italic;
+    font-weight: bold;
+}
+
+.card-body {
+    text-align: center;
+}
+
+header, main, footer {
+    margin-left: 10px;
+    margin-right: 10px;
+}
