Imágenes en folder assets

--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,7 +1,7 @@
 <header id="header" class="header">
     <div class="vh-100 row justify-content-center align-items-center">
       <div class="col-sm-3">
-        <img id="logo-AP" class="img-fluid" src="logo-AP-mini.png"
+        <img id="logo-AP" class="img-fluid" src="../../../assets/AP logo.jpg"
         alt="Logo Argentina Programa"></div>
       <div class="col-sm-2"><span>#YoProgramo</span></div>
       <div class="col-sm"><a class="contact" href="https://github.com/SilBel16" target="_blank"><i class="fa-brands fa-github"></i></a></div>
