--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -10,7 +10,7 @@
     <div class="row project">
     <div class="col-sm-4">
     <div class="card" style="width:400px">
-    <img class="card-img-top" src="project-tributo.png" alt="Card image">
+    <img class="card-img-top" src="../../../assets/project-tributo.png" alt="Card image">
     <div class="card-body">
       <h4 class="card-title">Tribute page</h4>
       <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
@@ -22,7 +22,7 @@
     </div>
     <div class="col-sm-4">
     <div class="card" style="width:400px">
-    <img class="card-img-top" src="project-TDP.png" alt="Card image">
+    <img class="card-img-top" src="../../../assets/project-TDP.png" alt="Card image">
     <div class="card-body">
       <h4 class="card-title">Technical Documentation Page</h4>
       <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
@@ -34,7 +34,7 @@
     </div>
     <div class="col-sm-4">
     <div class="card" style="width:400px">
-    <img class="card-img-top" src="project-portfolio.png" alt="Card image">
+    <img class="card-img-top" src="../../../assets/project-portfolio.png" alt="Card image">
     <div class="card-body">
       <h4 class="card-title">Personal Portfolio</h4>
       <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
