--- a/src/app/componentes/skills/skills.component.html
+++ b/src/app/componentes/skills/skills.component.html
@@ -24,7 +24,7 @@
             <div class="progress-bar" style="width:50%">Intermedio</div>
           </div>
   
-          <h5>Typescript <img src="icons8-typescript-241.png"></h5>
+          <h5>Typescript <img src="../../../assets/icons8-typescript-241.png"></h5>
           <div class="progress">
             <div class="progress-bar" style="width:25%">Básico</div>
           </div>
@@ -42,10 +42,10 @@
       <h2 id="soft-h2">Soft Skills</h2>
       <div class="divider claro"></div>   
   
-      <h5><img src="icons8-teamwork-48.png"> Habilidades comunicativas</h5>    
-      <h5>Creatividad <img src="icons8-creativity-64.png"></h5>
-      <h5><img src="icons8-puzzle-64.png"> Resolución de problemas</h5> 
-      <h5>Adaptabilidad <img src="icons8-adaptation-64.png"></h5>
-      <h5><img src="icons8-teamwork-64.png"> Trabajo en equipo</h5>
+      <h5><img src="../../../assets/icons8-teamwork-48.png"> Habilidades comunicativas</h5>    
+      <h5>Creatividad <img src="../../../assets/icons8-creativity-64.png"></h5>
+      <h5><img src="../../../assets/icons8-puzzle-64.png"> Resolución de problemas</h5> 
+      <h5>Adaptabilidad <img src="../../../assets/icons8-adaptation-64.png"></h5>
+      <h5><img src="../../../assets/icons8-teamwork-64.png"> Trabajo en equipo</h5>
     </div>
   </section>
