--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -16,10 +16,10 @@
             <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
           </div>
         <!--  <input type="file" id="file1" onchange="showfile(this)"> -->
-          <a download="CV_silvina-belcastro.png" href="CV_silvina-belcastro.png"><button class="download-cv">Download CV</button></a>
+          <a download="CV_silvina-belcastro.png" href="../../../assets/CV_Silvina-Belcastro.png"><button class="download-cv">Download CV</button></a>
         </div>
         <div class="col-sm-4">
-          <img id="foto_perfil" src="Perfil-chica.jpg" alt="foto de perfil Silvina">
+          <img id="foto_perfil" src="../../../assets/Perfil-chica.jpg" alt="foto de perfil Silvina">
         </div>
       </div>  
     </div>            
