Front end global listo

--- a/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/src/app/componentes/acerca-de/acerca-de.component.html
@@ -1,14 +1,13 @@
 <section id="acerca_de">
-    <div class="container-fluid">
-      <div class="vh-100 row">
-        <div class="col-sm-1 text-left align-top btn-edit" onclick="cambiar_parrafo()">
+      <div class="row">
+        <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 text-left align-top btn-edit" onclick="cambiar_parrafo()">
           <a href="#" class="btn-left">
             <i class="fa fa-edit"></i>
           </a>
         </div>
-        <div class="col-sm-7 text-center align-self-center">
+        <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 text-center align-self-center">
           <h1>Silvina Belcastro</h1> 
-          <h2><em>Programadora web full stack junior</em></h2>
+          <h2><em>Full Stack Developer Jr</em></h2>
           <div>
             <p id="text-acercade">Soy una persona responsable, creativa, con mucha capacidad para el aprendizaje y habilidades en la comunicación.</p>
           </div>
@@ -16,11 +15,10 @@
             <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
           </div>
         <!--  <input type="file" id="file1" onchange="showfile(this)"> -->
-          <a download="CV_silvina-belcastro.png" href="../../../assets/CV_Silvina-Belcastro.png"><button class="download-cv">Download CV</button></a>
+          <a download="CV_silvina-belcastro.png" href="../../../assets/CV_Silvina-Belcastro.png"><button class="download-cv button">Download CV</button></a>
         </div>
-        <div class="col-sm-4">
-          <img id="foto_perfil" src="../../../assets/Perfil-chica.jpg" alt="foto de perfil Silvina">
+        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+          <img class="img-fluid" id="foto_perfil" src="../../../assets/Perfil-chica.jpg" alt="foto de perfil Silvina">
         </div>
-      </div>  
-    </div>            
+      </div>              
   </section>
