--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -2,12 +2,22 @@
     <div class="container-fluid">
       <h2>Experiencia</h2>
       <div class="divider claro"></div>
-      <div class="row">
-        <div class="col">
-          <p>Lorem ipsum dolor sit amet, consectetur adip</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adip</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adip</p>
+      <h4 class="text-center">Profesora de educación física</h4>
+      <div class="row text-center">  
+          <div class="col">
+          <p>Instituto San José de Flores</p>
+          <time>2013 - Actualidad</time>
+          </div>
+          <div class="col">
+          <p>Instituto Nuestra Señora de Luján de San José de Flores</p>
+          <time>2018 - Actualidad</time>  
         </div>
+          <div class="col">
+          <p>Instituto Elisa Harilaos</p>
+          <time>2019 - Actualidad</time>
+          </div>
+             
+        
       </div>
       </div>
     <!--Experiencia Aquí: colocarás toda la información de loslugares donde has trabajado, incluyendo título
