--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,13 +1,13 @@
-<footer id="contacto">
-    <div class="row contact-footer">
-          <div class="col-sm-4">
-            <i class="fa-solid fa-angles-up contact-icon"></i><a class="contact-a" href="#header">Inicio</a>
-          </div>
-          <div class="col-sm-4">
-            <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:silvinabelcastro@gmail.com">Silvinabelcastro@gmail.com</a>
-          </div>
-          <div class="col-sm-4">
-            <i class="fa-solid fa-map-location-dot contact-icon"></i>Ciudad Autónoma de Buenos Aires, Argentina
-          </div>
-      </div>
-    </footer>
+<footer id="contacto" class="container-fluid">
+  <div class="row">
+    <div class="col-sm-4 text-left">
+      <i class="fa-solid fa-angles-up contact-icon"></i><a class="contact-a" href="#header">Inicio</a>
+    </div>
+    <div class="col-sm-4 text-left">
+      <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:silvinabelcastro@gmail.com">Silvinabelcastro@gmail.com</a>
+    </div>
+    <div class="col-sm-4 text-left">
+      <i class="fa-solid fa-map-location-dot contact-icon"></i>Ciudad Autónoma de Buenos Aires, Argentina
+    </div>
+  </div>
+</footer>
