--- a/src/app/componentes/header/header.component.html
+++ b/src/app/componentes/header/header.component.html
@@ -1,16 +1,16 @@
 <header id="header" class="header">
-    <div class="vh-100 row justify-content-center align-items-center">
-      <div class="col-sm-3">
+    <div class="row justify-content-center align-items-center">
+      <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2">
         <img id="logo-AP" class="img-fluid" src="../../../assets/AP logo.jpg"
-        alt="Logo Argentina Programa"></div>
-      <div class="col-sm-2"><span>#YoProgramo</span></div>
-      <div class="col-sm"><a class="contact" href="https://github.com/SilBel16" target="_blank"><i class="fa-brands fa-github"></i></a></div>
-      <div class="col-sm"><a class="contact" href="https://www.linkedin.com/in/silvina-belcastro/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
-      <div class="col-sm"><a class="contact" href="https://codepen.io/Sil_Bel16" target="_blank"><i class="fa-brands fa-codepen"></i></a></div>
-      <div class="col-sm"><a class="contact" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-      <div class="col-sm"><a class="contact" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>          
-      <div class="col-sm"><a class="contact" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
-      <div class="col-sm"><button class="login">Login</button></div>
+        alt="Logo Argentina Programa" width="100px"></div>
+      <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><span>#YoProgramo</span></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://github.com/SilBel16" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://www.linkedin.com/in/silvina-belcastro/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://codepen.io/Sil_Bel16" target="_blank"><i class="fa-brands fa-codepen"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>          
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><button class="login button">Login</button></div>
     </div>
   </header>
   <nav class="navbar navbar-expand-sm">
@@ -37,6 +37,9 @@
       </ul>
     </div>
   </nav>
+
+  <!-- obtener información del
   <h1>{{miPortfolio.name}}</h1> 
   <h2><em>{{miPortfolio.position}}</em></h2>
   <p id="text-acercade">{{miPortfolio.acerca}}</p>
+-->
