--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -1,49 +1,50 @@
 <section id="proyectos">
-    <div class="container-fluid">
+  <div class="container-fluid">
     <h2>Proyectos</h2>
-    <div class="divider oscuro"></div>
+    <div class="divider oscuro">
+    </div>
           
-    <!--Proyectos: En esta sección deberá encontrarse la información sobre los proyectos que desarrollaste 
-    o en que te involucraste, incluyendo este portfolio web. Cada proyecto deberá contener el nombre,
-    fecha de realización, descripción y el link a su evidencia. Además, podés ilustrar esta sección con 
-    imágenes de los proyectos.-->   
+      <!--Proyectos: En esta sección deberá encontrarse la información sobre los proyectos que desarrollaste 
+      o en que te involucraste, incluyendo este portfolio web. Cada proyecto deberá contener el nombre,
+      fecha de realización, descripción y el link a su evidencia. Además, podés ilustrar esta sección con 
+      imágenes de los proyectos.-->   
     <div class="row project">
-    <div class="col-sm-4">
-    <div class="card" style="width:400px">
-    <img class="card-img-top" src="../../../assets/project-tributo.png" alt="Card image">
-    <div class="card-body">
-      <h4 class="card-title">Tribute page</h4>
-      <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
-      Abril - 2022
-      </p>
-      <a href="https://codepen.io/Sil_Bel16/pen/xxPjPpj" target="_blank" class="project-a"><button class="project btn">Ver proyecto</button></a>
-    </div>
-    </div>
-    </div>
-    <div class="col-sm-4">
-    <div class="card" style="width:400px">
-    <img class="card-img-top" src="../../../assets/project-TDP.png" alt="Card image">
-    <div class="card-body">
-      <h4 class="card-title">Technical Documentation Page</h4>
-      <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
-        Abril - 2022
-        </p>
-      <a href="https://codepen.io/Sil_Bel16/pen/MWrjpOo" target="_blank" class="project-a"><button class="project btn">Ver proyecto</button></a>
-    </div>
-    </div>
-    </div>
-    <div class="col-sm-4">
-    <div class="card" style="width:400px">
-    <img class="card-img-top" src="../../../assets/project-portfolio.png" alt="Card image">
-    <div class="card-body">
-      <h4 class="card-title">Personal Portfolio</h4>
-      <p class="card-text">Elaborado para certificación de Diseño Web Responsivo en freeCodeCamp <br>
-        Abril - 2022
-        </p>
-      <a href="https://codepen.io/Sil_Bel16/pen/xxpNpzE" target="_blank" class="project-a"><button class="project btn">Ver proyecto</button></a>
-    </div>
-    </div>
-    </div>   
+        <div class="col-sm-4">
+          <div class="card">
+          <img class="card-img-top" src="../../../assets/project-tributo.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">Tribute page</h4>
+            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
+            Abril - 2022
+            </p>
+            <a href="https://codepen.io/Sil_Bel16/pen/xxPjPpj" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
+          </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+          <img class="card-img-top" src="../../../assets/project-TDP.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">Technical Documentation Page</h4>
+            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
+              Abril - 2022
+              </p>
+            <a href="https://codepen.io/Sil_Bel16/pen/MWrjpOo" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
+          </div>
+          </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+          <img class="card-img-top" src="../../../assets/project-portfolio.png" alt="Card image">
+          <div class="card-body">
+            <h4 class="card-title">Personal Portfolio</h4>
+            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
+              Abril - 2022
+              </p>
+            <a href="https://codepen.io/Sil_Bel16/pen/xxpNpzE" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
+          </div>
+          </div>
+        </div>   
     </div>
   </div>
 </section>
