--- a/src/styles.css
+++ b/src/styles.css
@@ -23,12 +23,12 @@ span, h1 {
     font-weight: bold;
 }
 
-button {
+.button, .project-btn {
     padding: 4px 10px;
     background-color: #896acd;
     color: #eeeeee;
+    border-radius: 12px;
     border: none; 
-    border-radius: 20px;
     margin-right: 30px;
     cursor: pointer; /*aparece mano en cursor*/
     box-shadow: 1px 3px 11px -5px #896acd;
@@ -41,8 +41,11 @@ button:hover {
     transition: ease-in .4s; /*cambio de color mas progresivo*/
 }
 
-nav, .nav-link {
+nav {
     background-color: #eeeeee;
+}
+
+nav .nav-link {   
     color: #4f2361;
     text-transform: uppercase;
 }
@@ -59,8 +62,7 @@ nav, .nav-link {
 }
 
 section, footer {
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 10px;
 }
 
 #acerca_de, #educacion, #proyectos {
@@ -154,7 +156,8 @@ td img {
     text-align: center;
 }
 
-header, main, footer {
+main, footer {
     margin-left: 10px;
     margin-right: 10px;
 }
+
