--- a/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
+++ b/FrontEnd/src/app/componentes/acerca-de/acerca-de.component.html
@@ -6,10 +6,10 @@
           </a>
         </div>
         <div class="col-xs-12 col-sm-7 col-md-7 col-lg-7 text-center align-self-center">
-          <h1>Silvina Belcastro</h1> 
-          <h2><em>Full Stack Developer Jr</em></h2>
+          <h1>{{miPortfolio.name}}</h1> 
+          <h2><em>{{miPortfolio.position}}</em></h2>
           <div>
-            <p id="text-acercade">Soy una persona responsable, creativa, con mucha capacidad para el aprendizaje y habilidades en la comunicación.</p>
+            <p id="text-acercade">{{miPortfolio.acerca}}</p>
           </div>
           <div>
             <input id="edit-acercade" type="text" oninput="myFunction2(this.value)" style="display:none">
