--- a/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
+++ b/FrontEnd/src/app/componentes/experiencia/experiencia.component.html
@@ -2,22 +2,12 @@
     <div class="container-fluid">
       <h2>Experiencia</h2>
       <div class="divider claro"></div>
-      <h4 class="text-center">Profesora de educación física</h4>
-      <div class="row text-center">  
-          <div class="col">
-          <p>Instituto San José de Flores</p>
-          <time>2013 - Actualidad</time>
-          </div>
-          <div class="col">
-          <p>Instituto Nuestra Señora de Luján de San José de Flores</p>
-          <time>2018 - Actualidad</time>  
-        </div>
-          <div class="col">
-          <p>Instituto Elisa Harilaos</p>
-          <time>2019 - Actualidad</time>
-          </div>
-             
-        
+      <h4 class="text-center">{{miPortfolio.actualWork}}</h4>
+      <div class="row">
+      <div *ngFor="let experiencia of experienciaList" class="experiencia col-xs-6 col-sm-6 col-md-4 col-lg-34 text-center">  
+          <p>{{experiencia.name}}</p>
+          <time>{{experiencia.start}} - {{experiencia.end}}</time>
+          </div>  
       </div>
       </div>
     <!--Experiencia Aquí: colocarás toda la información de loslugares donde has trabajado, incluyendo título
