--- a/FrontEnd/src/app/componentes/footer/footer.component.html
+++ b/FrontEnd/src/app/componentes/footer/footer.component.html
@@ -4,10 +4,10 @@
       <i class="fa-solid fa-angles-up contact-icon"></i><a class="contact-a" href="#header">Inicio</a>
     </div>
     <div class="col-sm-4 text-left">
-      <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:silvinabelcastro@gmail.com">Silvinabelcastro@gmail.com</a>
+      <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:{{miPortfolio.mail}}">{{miPortfolio.mail}}</a>
     </div>
     <div class="col-sm-4 text-left">
-      <i class="fa-solid fa-map-location-dot contact-icon"></i>Ciudad Autónoma de Buenos Aires, Argentina
+      <i class="fa-solid fa-map-location-dot contact-icon"></i>{{miPortfolio.city}}
     </div>
   </div>
 </footer>
