--- a/FrontEnd/src/app/componentes/header/header.component.html
+++ b/FrontEnd/src/app/componentes/header/header.component.html
@@ -4,12 +4,12 @@
         <img id="logo-AP" class="img-fluid" src="../../../assets/AP logo.jpg"
         alt="Logo Argentina Programa" width="100px"></div>
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3"><span>#YoProgramo</span></div>
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://github.com/SilBel16" target="_blank"><i class="fa-brands fa-github"></i></a></div>
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://www.linkedin.com/in/silvina-belcastro/" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://codepen.io/Sil_Bel16" target="_blank"><i class="fa-brands fa-codepen"></i></a></div>
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://www.instagram.com/?hl=es-la" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>          
-      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.github}}" target="_blank"><i class="fa-brands fa-github"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.linkedin}}" target="_blank"><i class="fa-brands fa-linkedin"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.codepen}}" target="_blank"><i class="fa-brands fa-codepen"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.instagram}}" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.twitter}}" target="_blank"><i class="fa-brands fa-twitter"></i></a></div>          
+      <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><a class="contact" href="{{miPortfolio.facebook}}" target="_blank"><i class="fa-brands fa-facebook"></i></a></div>
       <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"><button class="login button">Login</button></div>
     </div>
   </header>
@@ -17,7 +17,7 @@
     <div class="container-fluid">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" href="#acerca_de">Acerca de...</a>
+          <a class="nav-link active" href="#acerca_de">Acerca de mi</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#experiencia">Experiencia</a>
