--- a/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
+++ b/FrontEnd/src/app/componentes/proyectos/proyectos.component.html
@@ -9,42 +9,16 @@
       fecha de realización, descripción y el link a su evidencia. Además, podés ilustrar esta sección con 
       imágenes de los proyectos.-->   
     <div class="row project">
-        <div class="col-sm-4">
+        <div *ngFor="let proyecto of proyectosList" class="col-sm-4">
           <div class="card">
-          <img class="card-img-top" src="../../../assets/project-tributo.png" alt="Card image">
+          <img class="card-img-top" src="{{proyecto.img}}" alt="Card image">
           <div class="card-body">
-            <h4 class="card-title">Tribute page</h4>
-            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
-            Abril - 2022
-            </p>
-            <a href="https://codepen.io/Sil_Bel16/pen/xxPjPpj" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
+            <h4 class="card-title">{{proyecto.title}}</h4>
+            <p class="card-text">{{proyecto.description}}</p>
+            <a href="{{proyecto.url}}" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
           </div>
           </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-          <img class="card-img-top" src="../../../assets/project-TDP.png" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">Technical Documentation Page</h4>
-            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
-              Abril - 2022
-              </p>
-            <a href="https://codepen.io/Sil_Bel16/pen/MWrjpOo" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
-          </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <div class="card">
-          <img class="card-img-top" src="../../../assets/project-portfolio.png" alt="Card image">
-          <div class="card-body">
-            <h4 class="card-title">Personal Portfolio</h4>
-            <p class="card-text">Certificación Diseño Web Responsivo en freeCodeCamp<br>
-              Abril - 2022
-              </p>
-            <a href="https://codepen.io/Sil_Bel16/pen/xxpNpzE" target="_blank" class="project-a"><button class="project-btn">Ver proyecto</button></a>
-          </div>
-          </div>
-        </div>   
+        </div>  
     </div>
   </div>
 </section>
