arreglo en footer por agregar datos al data.JSON

--- a/FrontEnd/src/app/componentes/footer/footer.component.html
+++ b/FrontEnd/src/app/componentes/footer/footer.component.html
@@ -7,7 +7,7 @@
       <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:{{miPortfolio.mail}}">{{miPortfolio.mail}}</a>
     </div>
     <div class="col-sm-4 text-left">
-      <i class="fa-solid fa-map-location-dot contact-icon"></i>{{miPortfolio.city}}
+      <i class="fa-solid fa-map-location-dot contact-icon"></i><p>{{miPortfolio.city}} - {{miPortfolio.country}}</p>
     </div>
   </div>
 </footer>
