Educación - arreglo imágenes // footer agregue wa

--- a/FrontEnd/src/app/componentes/footer/footer.component.html
+++ b/FrontEnd/src/app/componentes/footer/footer.component.html
@@ -1,12 +1,15 @@
 <footer id="contacto" class="container-fluid">
   <div class="row">
-    <div class="col-sm-4 text-left">
+    <div class="col-sm-1 text-center">
       <i class="fa-solid fa-angles-up contact-icon"></i><a class="contact-a" href="#header">Inicio</a>
     </div>
-    <div class="col-sm-4 text-left">
+    <div class="col-sm-4 text-center">
       <i class="fa-solid fa-envelope contact-icon"></i><a class="contact-a" href="mailto:{{miPortfolio.mail}}">{{miPortfolio.mail}}</a>
     </div>
-    <div class="col-sm-4 text-left">
+    <div class="col-sm-3 text-center">
+      <i class="fa-brands fa-whatsapp"></i><p> {{miPortfolio.wa}}</p>
+    </div>
+    <div class="col-sm-4 text-center">
       <i class="fa-solid fa-map-location-dot contact-icon"></i><p>{{miPortfolio.city}} - {{miPortfolio.country}}</p>
     </div>
   </div>
